--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^4.3.1",
     "ts-loader": "^5.3.1",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "unstated-next": "^1.1.0"
   },
   "devDependencies": {
     "@types/electron": "^1.6.10",
